fixed some stretched photos for mobile users

--- a/src/styles/mobile.scss
+++ b/src/styles/mobile.scss
@@ -120,7 +120,10 @@
   .top-inner-text-block {
     line-height: 35px;
   }
-
+  
+  .progress-body-image {
+    height: 325px !important;
+  }
   /** Partners Pagr */
 
   .partners-content {
